[package]
name = "md-todo"
license = "MIT"
version = "0.1.1"
edition = "2021"
description = "Work with todos in markdown files."
readme = "README.md"
repository = "https://github.com/philphilphil/md-todo-rs"
documentation = "https://docs.rs/crate/md-todo"

[dependencies]
anyhow = "1"
md-5 = "0.10.0"
tempfile = "3.3.0"
thiserror = "1"
